# demo-tauri

./: .gitignore  LEARN-01.md  LEARN-03.md  LEARN.md  ecosystem.config.cjs  package.json  pnpm-lock.yaml
.windsurf/: settings.json
.windsurf/workflows/: chat-guide.md
client/desktop/: CHANGELOG.md  package.json
client/desktop/src-tauri/: Cargo.toml  Makefile.toml  release.toml  tauri.conf.json
client/web-app/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
client/web-app/src/: App.tsx
docs/: GUIDE.md  LEARN-01.md  LEARN-02.MD  LEARN-03.md  LEARN-04.md  PRE_LEARN.md  实操篇.md
src-tauri/: Cargo.toml  Tauri.toml  cliff.toml  tauri.conf.json  unused.tauri.conf.json
src-tauri/src/: main.rs
