[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
license = ""
name = "demo-tauri"
repository = ""
rust-version = "1.77.2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "app_lib"

[build-dependencies]
tauri-build = {version = "2.3.1", features = [] }

[dependencies]
log = "0.4"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "2.7.0", features = [] }
tauri-plugin-log = "2"
